// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blog-post.utils renderPost should return the rendered post 1`] = `
"<html><head> <title>Post 1 </title><meta name="viewport" content="width=device-width, initial-scale=1"/><link rel="icon" href="https://wjt.sfo2.cdn.digitaloceanspaces.com/wjt_logo.ico"/></head><style>*,*:before,*:after{box-sizing:border-box}*{margin:0}body{line-height:1.5;-webkit-font-smoothing:antialiased}img,picture,video,canvas,svg{display:block;max-width:100%}input,button,textarea,select{font:inherit}p,h1,h2,h3,h4,h5,h6{overflow-wrap:break-word}p{text-wrap:pretty}h1,h2,h3,h4,h5,h6{text-wrap:balance}#root,#__next{isolation:isolate}html{padding:1rem;font-family:Roboto,sans-serif}.post{height:100%;border:solid thin black;padding:1rem}
</style><div class="post"><h1>Post 1</h1>
<p>This is the first post.
<img src="/path/to/image-1.jpg" alt="Image 1" /></p>
</div></html>"
`;

exports[`generate-blog-posts getImageNodes should return the correct image nodes - CDN path 1`] = `
[
  Node {
    "_destination": "https://wjt.sfo2.cdn.digitaloceanspaces.com/wjt_logo.ico",
    "_fenceChar": null,
    "_fenceLength": 0,
    "_fenceOffset": null,
    "_firstChild": Node {
      "_destination": null,
      "_fenceChar": null,
      "_fenceLength": 0,
      "_fenceOffset": null,
      "_firstChild": null,
      "_info": null,
      "_isFenced": false,
      "_lastChild": null,
      "_level": null,
      "_listData": {},
      "_literal": "CDN Image",
      "_next": null,
      "_onEnter": null,
      "_onExit": null,
      "_open": true,
      "_parent": [Circular],
      "_prev": null,
      "_sourcepos": undefined,
      "_string_content": null,
      "_title": null,
      "_type": "text",
    },
    "_info": null,
    "_isFenced": false,
    "_lastChild": Node {
      "_destination": null,
      "_fenceChar": null,
      "_fenceLength": 0,
      "_fenceOffset": null,
      "_firstChild": null,
      "_info": null,
      "_isFenced": false,
      "_lastChild": null,
      "_level": null,
      "_listData": {},
      "_literal": "CDN Image",
      "_next": null,
      "_onEnter": null,
      "_onExit": null,
      "_open": true,
      "_parent": [Circular],
      "_prev": null,
      "_sourcepos": undefined,
      "_string_content": null,
      "_title": null,
      "_type": "text",
    },
    "_level": null,
    "_listData": {},
    "_literal": null,
    "_next": null,
    "_onEnter": null,
    "_onExit": null,
    "_open": true,
    "_parent": Node {
      "_destination": null,
      "_fenceChar": null,
      "_fenceLength": 0,
      "_fenceOffset": null,
      "_firstChild": Node {
        "_destination": null,
        "_fenceChar": null,
        "_fenceLength": 0,
        "_fenceOffset": null,
        "_firstChild": null,
        "_info": null,
        "_isFenced": false,
        "_lastChild": null,
        "_level": null,
        "_listData": {},
        "_literal": "This is the second post.",
        "_next": Node {
          "_destination": null,
          "_fenceChar": null,
          "_fenceLength": 0,
          "_fenceOffset": null,
          "_firstChild": null,
          "_info": null,
          "_isFenced": false,
          "_lastChild": null,
          "_level": null,
          "_listData": {},
          "_literal": null,
          "_next": [Circular],
          "_onEnter": null,
          "_onExit": null,
          "_open": true,
          "_parent": [Circular],
          "_prev": [Circular],
          "_sourcepos": undefined,
          "_string_content": null,
          "_title": null,
          "_type": "softbreak",
        },
        "_onEnter": null,
        "_onExit": null,
        "_open": true,
        "_parent": [Circular],
        "_prev": null,
        "_sourcepos": undefined,
        "_string_content": null,
        "_title": null,
        "_type": "text",
      },
      "_info": null,
      "_isFenced": false,
      "_lastChild": [Circular],
      "_level": null,
      "_listData": {},
      "_literal": null,
      "_next": null,
      "_onEnter": null,
      "_onExit": null,
      "_open": false,
      "_parent": Node {
        "_destination": null,
        "_fenceChar": null,
        "_fenceLength": 0,
        "_fenceOffset": null,
        "_firstChild": Node {
          "_destination": null,
          "_fenceChar": null,
          "_fenceLength": 0,
          "_fenceOffset": null,
          "_firstChild": Node {
            "_destination": null,
            "_fenceChar": null,
            "_fenceLength": 0,
            "_fenceOffset": null,
            "_firstChild": null,
            "_info": null,
            "_isFenced": false,
            "_lastChild": null,
            "_level": null,
            "_listData": {},
            "_literal": "Post 2",
            "_next": null,
            "_onEnter": null,
            "_onExit": null,
            "_open": true,
            "_parent": [Circular],
            "_prev": null,
            "_sourcepos": undefined,
            "_string_content": null,
            "_title": null,
            "_type": "text",
          },
          "_info": null,
          "_isFenced": false,
          "_lastChild": Node {
            "_destination": null,
            "_fenceChar": null,
            "_fenceLength": 0,
            "_fenceOffset": null,
            "_firstChild": null,
            "_info": null,
            "_isFenced": false,
            "_lastChild": null,
            "_level": null,
            "_listData": {},
            "_literal": "Post 2",
            "_next": null,
            "_onEnter": null,
            "_onExit": null,
            "_open": true,
            "_parent": [Circular],
            "_prev": null,
            "_sourcepos": undefined,
            "_string_content": null,
            "_title": null,
            "_type": "text",
          },
          "_level": 1,
          "_listData": {},
          "_literal": null,
          "_next": [Circular],
          "_onEnter": null,
          "_onExit": null,
          "_open": false,
          "_parent": [Circular],
          "_prev": null,
          "_sourcepos": [
            [
              1,
              1,
            ],
            [
              1,
              8,
            ],
          ],
          "_string_content": null,
          "_title": null,
          "_type": "heading",
        },
        "_info": null,
        "_isFenced": false,
        "_lastChild": [Circular],
        "_level": null,
        "_listData": {},
        "_literal": null,
        "_next": null,
        "_onEnter": null,
        "_onExit": null,
        "_open": false,
        "_parent": null,
        "_prev": null,
        "_sourcepos": [
          [
            1,
            1,
          ],
          [
            4,
            70,
          ],
        ],
        "_string_content": null,
        "_title": null,
        "_type": "document",
      },
      "_prev": Node {
        "_destination": null,
        "_fenceChar": null,
        "_fenceLength": 0,
        "_fenceOffset": null,
        "_firstChild": Node {
          "_destination": null,
          "_fenceChar": null,
          "_fenceLength": 0,
          "_fenceOffset": null,
          "_firstChild": null,
          "_info": null,
          "_isFenced": false,
          "_lastChild": null,
          "_level": null,
          "_listData": {},
          "_literal": "Post 2",
          "_next": null,
          "_onEnter": null,
          "_onExit": null,
          "_open": true,
          "_parent": [Circular],
          "_prev": null,
          "_sourcepos": undefined,
          "_string_content": null,
          "_title": null,
          "_type": "text",
        },
        "_info": null,
        "_isFenced": false,
        "_lastChild": Node {
          "_destination": null,
          "_fenceChar": null,
          "_fenceLength": 0,
          "_fenceOffset": null,
          "_firstChild": null,
          "_info": null,
          "_isFenced": false,
          "_lastChild": null,
          "_level": null,
          "_listData": {},
          "_literal": "Post 2",
          "_next": null,
          "_onEnter": null,
          "_onExit": null,
          "_open": true,
          "_parent": [Circular],
          "_prev": null,
          "_sourcepos": undefined,
          "_string_content": null,
          "_title": null,
          "_type": "text",
        },
        "_level": 1,
        "_listData": {},
        "_literal": null,
        "_next": [Circular],
        "_onEnter": null,
        "_onExit": null,
        "_open": false,
        "_parent": Node {
          "_destination": null,
          "_fenceChar": null,
          "_fenceLength": 0,
          "_fenceOffset": null,
          "_firstChild": [Circular],
          "_info": null,
          "_isFenced": false,
          "_lastChild": [Circular],
          "_level": null,
          "_listData": {},
          "_literal": null,
          "_next": null,
          "_onEnter": null,
          "_onExit": null,
          "_open": false,
          "_parent": null,
          "_prev": null,
          "_sourcepos": [
            [
              1,
              1,
            ],
            [
              4,
              70,
            ],
          ],
          "_string_content": null,
          "_title": null,
          "_type": "document",
        },
        "_prev": null,
        "_sourcepos": [
          [
            1,
            1,
          ],
          [
            1,
            8,
          ],
        ],
        "_string_content": null,
        "_title": null,
        "_type": "heading",
      },
      "_sourcepos": [
        [
          3,
          1,
        ],
        [
          4,
          70,
        ],
      ],
      "_string_content": null,
      "_title": null,
      "_type": "paragraph",
    },
    "_prev": Node {
      "_destination": null,
      "_fenceChar": null,
      "_fenceLength": 0,
      "_fenceOffset": null,
      "_firstChild": null,
      "_info": null,
      "_isFenced": false,
      "_lastChild": null,
      "_level": null,
      "_listData": {},
      "_literal": null,
      "_next": [Circular],
      "_onEnter": null,
      "_onExit": null,
      "_open": true,
      "_parent": Node {
        "_destination": null,
        "_fenceChar": null,
        "_fenceLength": 0,
        "_fenceOffset": null,
        "_firstChild": Node {
          "_destination": null,
          "_fenceChar": null,
          "_fenceLength": 0,
          "_fenceOffset": null,
          "_firstChild": null,
          "_info": null,
          "_isFenced": false,
          "_lastChild": null,
          "_level": null,
          "_listData": {},
          "_literal": "This is the second post.",
          "_next": [Circular],
          "_onEnter": null,
          "_onExit": null,
          "_open": true,
          "_parent": [Circular],
          "_prev": null,
          "_sourcepos": undefined,
          "_string_content": null,
          "_title": null,
          "_type": "text",
        },
        "_info": null,
        "_isFenced": false,
        "_lastChild": [Circular],
        "_level": null,
        "_listData": {},
        "_literal": null,
        "_next": null,
        "_onEnter": null,
        "_onExit": null,
        "_open": false,
        "_parent": Node {
          "_destination": null,
          "_fenceChar": null,
          "_fenceLength": 0,
          "_fenceOffset": null,
          "_firstChild": Node {
            "_destination": null,
            "_fenceChar": null,
            "_fenceLength": 0,
            "_fenceOffset": null,
            "_firstChild": Node {
              "_destination": null,
              "_fenceChar": null,
              "_fenceLength": 0,
              "_fenceOffset": null,
              "_firstChild": null,
              "_info": null,
              "_isFenced": false,
              "_lastChild": null,
              "_level": null,
              "_listData": {},
              "_literal": "Post 2",
              "_next": null,
              "_onEnter": null,
              "_onExit": null,
              "_open": true,
              "_parent": [Circular],
              "_prev": null,
              "_sourcepos": undefined,
              "_string_content": null,
              "_title": null,
              "_type": "text",
            },
            "_info": null,
            "_isFenced": false,
            "_lastChild": Node {
              "_destination": null,
              "_fenceChar": null,
              "_fenceLength": 0,
              "_fenceOffset": null,
              "_firstChild": null,
              "_info": null,
              "_isFenced": false,
              "_lastChild": null,
              "_level": null,
              "_listData": {},
              "_literal": "Post 2",
              "_next": null,
              "_onEnter": null,
              "_onExit": null,
              "_open": true,
              "_parent": [Circular],
              "_prev": null,
              "_sourcepos": undefined,
              "_string_content": null,
              "_title": null,
              "_type": "text",
            },
            "_level": 1,
            "_listData": {},
            "_literal": null,
            "_next": [Circular],
            "_onEnter": null,
            "_onExit": null,
            "_open": false,
            "_parent": [Circular],
            "_prev": null,
            "_sourcepos": [
              [
                1,
                1,
              ],
              [
                1,
                8,
              ],
            ],
            "_string_content": null,
            "_title": null,
            "_type": "heading",
          },
          "_info": null,
          "_isFenced": false,
          "_lastChild": [Circular],
          "_level": null,
          "_listData": {},
          "_literal": null,
          "_next": null,
          "_onEnter": null,
          "_onExit": null,
          "_open": false,
          "_parent": null,
          "_prev": null,
          "_sourcepos": [
            [
              1,
              1,
            ],
            [
              4,
              70,
            ],
          ],
          "_string_content": null,
          "_title": null,
          "_type": "document",
        },
        "_prev": Node {
          "_destination": null,
          "_fenceChar": null,
          "_fenceLength": 0,
          "_fenceOffset": null,
          "_firstChild": Node {
            "_destination": null,
            "_fenceChar": null,
            "_fenceLength": 0,
            "_fenceOffset": null,
            "_firstChild": null,
            "_info": null,
            "_isFenced": false,
            "_lastChild": null,
            "_level": null,
            "_listData": {},
            "_literal": "Post 2",
            "_next": null,
            "_onEnter": null,
            "_onExit": null,
            "_open": true,
            "_parent": [Circular],
            "_prev": null,
            "_sourcepos": undefined,
            "_string_content": null,
            "_title": null,
            "_type": "text",
          },
          "_info": null,
          "_isFenced": false,
          "_lastChild": Node {
            "_destination": null,
            "_fenceChar": null,
            "_fenceLength": 0,
            "_fenceOffset": null,
            "_firstChild": null,
            "_info": null,
            "_isFenced": false,
            "_lastChild": null,
            "_level": null,
            "_listData": {},
            "_literal": "Post 2",
            "_next": null,
            "_onEnter": null,
            "_onExit": null,
            "_open": true,
            "_parent": [Circular],
            "_prev": null,
            "_sourcepos": undefined,
            "_string_content": null,
            "_title": null,
            "_type": "text",
          },
          "_level": 1,
          "_listData": {},
          "_literal": null,
          "_next": [Circular],
          "_onEnter": null,
          "_onExit": null,
          "_open": false,
          "_parent": Node {
            "_destination": null,
            "_fenceChar": null,
            "_fenceLength": 0,
            "_fenceOffset": null,
            "_firstChild": [Circular],
            "_info": null,
            "_isFenced": false,
            "_lastChild": [Circular],
            "_level": null,
            "_listData": {},
            "_literal": null,
            "_next": null,
            "_onEnter": null,
            "_onExit": null,
            "_open": false,
            "_parent": null,
            "_prev": null,
            "_sourcepos": [
              [
                1,
                1,
              ],
              [
                4,
                70,
              ],
            ],
            "_string_content": null,
            "_title": null,
            "_type": "document",
          },
          "_prev": null,
          "_sourcepos": [
            [
              1,
              1,
            ],
            [
              1,
              8,
            ],
          ],
          "_string_content": null,
          "_title": null,
          "_type": "heading",
        },
        "_sourcepos": [
          [
            3,
            1,
          ],
          [
            4,
            70,
          ],
        ],
        "_string_content": null,
        "_title": null,
        "_type": "paragraph",
      },
      "_prev": Node {
        "_destination": null,
        "_fenceChar": null,
        "_fenceLength": 0,
        "_fenceOffset": null,
        "_firstChild": null,
        "_info": null,
        "_isFenced": false,
        "_lastChild": null,
        "_level": null,
        "_listData": {},
        "_literal": "This is the second post.",
        "_next": [Circular],
        "_onEnter": null,
        "_onExit": null,
        "_open": true,
        "_parent": Node {
          "_destination": null,
          "_fenceChar": null,
          "_fenceLength": 0,
          "_fenceOffset": null,
          "_firstChild": [Circular],
          "_info": null,
          "_isFenced": false,
          "_lastChild": [Circular],
          "_level": null,
          "_listData": {},
          "_literal": null,
          "_next": null,
          "_onEnter": null,
          "_onExit": null,
          "_open": false,
          "_parent": Node {
            "_destination": null,
            "_fenceChar": null,
            "_fenceLength": 0,
            "_fenceOffset": null,
            "_firstChild": Node {
              "_destination": null,
              "_fenceChar": null,
              "_fenceLength": 0,
              "_fenceOffset": null,
              "_firstChild": Node {
                "_destination": null,
                "_fenceChar": null,
                "_fenceLength": 0,
                "_fenceOffset": null,
                "_firstChild": null,
                "_info": null,
                "_isFenced": false,
                "_lastChild": null,
                "_level": null,
                "_listData": {},
                "_literal": "Post 2",
                "_next": null,
                "_onEnter": null,
                "_onExit": null,
                "_open": true,
                "_parent": [Circular],
                "_prev": null,
                "_sourcepos": undefined,
                "_string_content": null,
                "_title": null,
                "_type": "text",
              },
              "_info": null,
              "_isFenced": false,
              "_lastChild": Node {
                "_destination": null,
                "_fenceChar": null,
                "_fenceLength": 0,
                "_fenceOffset": null,
                "_firstChild": null,
                "_info": null,
                "_isFenced": false,
                "_lastChild": null,
                "_level": null,
                "_listData": {},
                "_literal": "Post 2",
                "_next": null,
                "_onEnter": null,
                "_onExit": null,
                "_open": true,
                "_parent": [Circular],
                "_prev": null,
                "_sourcepos": undefined,
                "_string_content": null,
                "_title": null,
                "_type": "text",
              },
              "_level": 1,
              "_listData": {},
              "_literal": null,
              "_next": [Circular],
              "_onEnter": null,
              "_onExit": null,
              "_open": false,
              "_parent": [Circular],
              "_prev": null,
              "_sourcepos": [
                [
                  1,
                  1,
                ],
                [
                  1,
                  8,
                ],
              ],
              "_string_content": null,
              "_title": null,
              "_type": "heading",
            },
            "_info": null,
            "_isFenced": false,
            "_lastChild": [Circular],
            "_level": null,
            "_listData": {},
            "_literal": null,
            "_next": null,
            "_onEnter": null,
            "_onExit": null,
            "_open": false,
            "_parent": null,
            "_prev": null,
            "_sourcepos": [
              [
                1,
                1,
              ],
              [
                4,
                70,
              ],
            ],
            "_string_content": null,
            "_title": null,
            "_type": "document",
          },
          "_prev": Node {
            "_destination": null,
            "_fenceChar": null,
            "_fenceLength": 0,
            "_fenceOffset": null,
            "_firstChild": Node {
              "_destination": null,
              "_fenceChar": null,
              "_fenceLength": 0,
              "_fenceOffset": null,
              "_firstChild": null,
              "_info": null,
              "_isFenced": false,
              "_lastChild": null,
              "_level": null,
              "_listData": {},
              "_literal": "Post 2",
              "_next": null,
              "_onEnter": null,
              "_onExit": null,
              "_open": true,
              "_parent": [Circular],
              "_prev": null,
              "_sourcepos": undefined,
              "_string_content": null,
              "_title": null,
              "_type": "text",
            },
            "_info": null,
            "_isFenced": false,
            "_lastChild": Node {
              "_destination": null,
              "_fenceChar": null,
              "_fenceLength": 0,
              "_fenceOffset": null,
              "_firstChild": null,
              "_info": null,
              "_isFenced": false,
              "_lastChild": null,
              "_level": null,
              "_listData": {},
              "_literal": "Post 2",
              "_next": null,
              "_onEnter": null,
              "_onExit": null,
              "_open": true,
              "_parent": [Circular],
              "_prev": null,
              "_sourcepos": undefined,
              "_string_content": null,
              "_title": null,
              "_type": "text",
            },
            "_level": 1,
            "_listData": {},
            "_literal": null,
            "_next": [Circular],
            "_onEnter": null,
            "_onExit": null,
            "_open": false,
            "_parent": Node {
              "_destination": null,
              "_fenceChar": null,
              "_fenceLength": 0,
              "_fenceOffset": null,
              "_firstChild": [Circular],
              "_info": null,
              "_isFenced": false,
              "_lastChild": [Circular],
              "_level": null,
              "_listData": {},
              "_literal": null,
              "_next": null,
              "_onEnter": null,
              "_onExit": null,
              "_open": false,
              "_parent": null,
              "_prev": null,
              "_sourcepos": [
                [
                  1,
                  1,
                ],
                [
                  4,
                  70,
                ],
              ],
              "_string_content": null,
              "_title": null,
              "_type": "document",
            },
            "_prev": null,
            "_sourcepos": [
              [
                1,
                1,
              ],
              [
                1,
                8,
              ],
            ],
            "_string_content": null,
            "_title": null,
            "_type": "heading",
          },
          "_sourcepos": [
            [
              3,
              1,
            ],
            [
              4,
              70,
            ],
          ],
          "_string_content": null,
          "_title": null,
          "_type": "paragraph",
        },
        "_prev": null,
        "_sourcepos": undefined,
        "_string_content": null,
        "_title": null,
        "_type": "text",
      },
      "_sourcepos": undefined,
      "_string_content": null,
      "_title": null,
      "_type": "softbreak",
    },
    "_sourcepos": undefined,
    "_string_content": null,
    "_title": "",
    "_type": "image",
  },
]
`;

exports[`generate-blog-posts getImageNodes should return the correct image nodes - local path 1`] = `
[
  Node {
    "_destination": "/path/to/image-1.jpg",
    "_fenceChar": null,
    "_fenceLength": 0,
    "_fenceOffset": null,
    "_firstChild": Node {
      "_destination": null,
      "_fenceChar": null,
      "_fenceLength": 0,
      "_fenceOffset": null,
      "_firstChild": null,
      "_info": null,
      "_isFenced": false,
      "_lastChild": null,
      "_level": null,
      "_listData": {},
      "_literal": "Image 1",
      "_next": null,
      "_onEnter": null,
      "_onExit": null,
      "_open": true,
      "_parent": [Circular],
      "_prev": null,
      "_sourcepos": undefined,
      "_string_content": null,
      "_title": null,
      "_type": "text",
    },
    "_info": null,
    "_isFenced": false,
    "_lastChild": Node {
      "_destination": null,
      "_fenceChar": null,
      "_fenceLength": 0,
      "_fenceOffset": null,
      "_firstChild": null,
      "_info": null,
      "_isFenced": false,
      "_lastChild": null,
      "_level": null,
      "_listData": {},
      "_literal": "Image 1",
      "_next": null,
      "_onEnter": null,
      "_onExit": null,
      "_open": true,
      "_parent": [Circular],
      "_prev": null,
      "_sourcepos": undefined,
      "_string_content": null,
      "_title": null,
      "_type": "text",
    },
    "_level": null,
    "_listData": {},
    "_literal": null,
    "_next": null,
    "_onEnter": null,
    "_onExit": null,
    "_open": true,
    "_parent": Node {
      "_destination": null,
      "_fenceChar": null,
      "_fenceLength": 0,
      "_fenceOffset": null,
      "_firstChild": Node {
        "_destination": null,
        "_fenceChar": null,
        "_fenceLength": 0,
        "_fenceOffset": null,
        "_firstChild": null,
        "_info": null,
        "_isFenced": false,
        "_lastChild": null,
        "_level": null,
        "_listData": {},
        "_literal": "This is the first post.",
        "_next": Node {
          "_destination": null,
          "_fenceChar": null,
          "_fenceLength": 0,
          "_fenceOffset": null,
          "_firstChild": null,
          "_info": null,
          "_isFenced": false,
          "_lastChild": null,
          "_level": null,
          "_listData": {},
          "_literal": null,
          "_next": [Circular],
          "_onEnter": null,
          "_onExit": null,
          "_open": true,
          "_parent": [Circular],
          "_prev": [Circular],
          "_sourcepos": undefined,
          "_string_content": null,
          "_title": null,
          "_type": "softbreak",
        },
        "_onEnter": null,
        "_onExit": null,
        "_open": true,
        "_parent": [Circular],
        "_prev": null,
        "_sourcepos": undefined,
        "_string_content": null,
        "_title": null,
        "_type": "text",
      },
      "_info": null,
      "_isFenced": false,
      "_lastChild": [Circular],
      "_level": null,
      "_listData": {},
      "_literal": null,
      "_next": null,
      "_onEnter": null,
      "_onExit": null,
      "_open": false,
      "_parent": Node {
        "_destination": null,
        "_fenceChar": null,
        "_fenceLength": 0,
        "_fenceOffset": null,
        "_firstChild": Node {
          "_destination": null,
          "_fenceChar": null,
          "_fenceLength": 0,
          "_fenceOffset": null,
          "_firstChild": Node {
            "_destination": null,
            "_fenceChar": null,
            "_fenceLength": 0,
            "_fenceOffset": null,
            "_firstChild": null,
            "_info": null,
            "_isFenced": false,
            "_lastChild": null,
            "_level": null,
            "_listData": {},
            "_literal": "Post 1",
            "_next": null,
            "_onEnter": null,
            "_onExit": null,
            "_open": true,
            "_parent": [Circular],
            "_prev": null,
            "_sourcepos": undefined,
            "_string_content": null,
            "_title": null,
            "_type": "text",
          },
          "_info": null,
          "_isFenced": false,
          "_lastChild": Node {
            "_destination": null,
            "_fenceChar": null,
            "_fenceLength": 0,
            "_fenceOffset": null,
            "_firstChild": null,
            "_info": null,
            "_isFenced": false,
            "_lastChild": null,
            "_level": null,
            "_listData": {},
            "_literal": "Post 1",
            "_next": null,
            "_onEnter": null,
            "_onExit": null,
            "_open": true,
            "_parent": [Circular],
            "_prev": null,
            "_sourcepos": undefined,
            "_string_content": null,
            "_title": null,
            "_type": "text",
          },
          "_level": 1,
          "_listData": {},
          "_literal": null,
          "_next": [Circular],
          "_onEnter": null,
          "_onExit": null,
          "_open": false,
          "_parent": [Circular],
          "_prev": null,
          "_sourcepos": [
            [
              1,
              1,
            ],
            [
              1,
              8,
            ],
          ],
          "_string_content": null,
          "_title": null,
          "_type": "heading",
        },
        "_info": null,
        "_isFenced": false,
        "_lastChild": [Circular],
        "_level": null,
        "_listData": {},
        "_literal": null,
        "_next": null,
        "_onEnter": null,
        "_onExit": null,
        "_open": false,
        "_parent": null,
        "_prev": null,
        "_sourcepos": [
          [
            1,
            1,
          ],
          [
            4,
            32,
          ],
        ],
        "_string_content": null,
        "_title": null,
        "_type": "document",
      },
      "_prev": Node {
        "_destination": null,
        "_fenceChar": null,
        "_fenceLength": 0,
        "_fenceOffset": null,
        "_firstChild": Node {
          "_destination": null,
          "_fenceChar": null,
          "_fenceLength": 0,
          "_fenceOffset": null,
          "_firstChild": null,
          "_info": null,
          "_isFenced": false,
          "_lastChild": null,
          "_level": null,
          "_listData": {},
          "_literal": "Post 1",
          "_next": null,
          "_onEnter": null,
          "_onExit": null,
          "_open": true,
          "_parent": [Circular],
          "_prev": null,
          "_sourcepos": undefined,
          "_string_content": null,
          "_title": null,
          "_type": "text",
        },
        "_info": null,
        "_isFenced": false,
        "_lastChild": Node {
          "_destination": null,
          "_fenceChar": null,
          "_fenceLength": 0,
          "_fenceOffset": null,
          "_firstChild": null,
          "_info": null,
          "_isFenced": false,
          "_lastChild": null,
          "_level": null,
          "_listData": {},
          "_literal": "Post 1",
          "_next": null,
          "_onEnter": null,
          "_onExit": null,
          "_open": true,
          "_parent": [Circular],
          "_prev": null,
          "_sourcepos": undefined,
          "_string_content": null,
          "_title": null,
          "_type": "text",
        },
        "_level": 1,
        "_listData": {},
        "_literal": null,
        "_next": [Circular],
        "_onEnter": null,
        "_onExit": null,
        "_open": false,
        "_parent": Node {
          "_destination": null,
          "_fenceChar": null,
          "_fenceLength": 0,
          "_fenceOffset": null,
          "_firstChild": [Circular],
          "_info": null,
          "_isFenced": false,
          "_lastChild": [Circular],
          "_level": null,
          "_listData": {},
          "_literal": null,
          "_next": null,
          "_onEnter": null,
          "_onExit": null,
          "_open": false,
          "_parent": null,
          "_prev": null,
          "_sourcepos": [
            [
              1,
              1,
            ],
            [
              4,
              32,
            ],
          ],
          "_string_content": null,
          "_title": null,
          "_type": "document",
        },
        "_prev": null,
        "_sourcepos": [
          [
            1,
            1,
          ],
          [
            1,
            8,
          ],
        ],
        "_string_content": null,
        "_title": null,
        "_type": "heading",
      },
      "_sourcepos": [
        [
          3,
          1,
        ],
        [
          4,
          32,
        ],
      ],
      "_string_content": null,
      "_title": null,
      "_type": "paragraph",
    },
    "_prev": Node {
      "_destination": null,
      "_fenceChar": null,
      "_fenceLength": 0,
      "_fenceOffset": null,
      "_firstChild": null,
      "_info": null,
      "_isFenced": false,
      "_lastChild": null,
      "_level": null,
      "_listData": {},
      "_literal": null,
      "_next": [Circular],
      "_onEnter": null,
      "_onExit": null,
      "_open": true,
      "_parent": Node {
        "_destination": null,
        "_fenceChar": null,
        "_fenceLength": 0,
        "_fenceOffset": null,
        "_firstChild": Node {
          "_destination": null,
          "_fenceChar": null,
          "_fenceLength": 0,
          "_fenceOffset": null,
          "_firstChild": null,
          "_info": null,
          "_isFenced": false,
          "_lastChild": null,
          "_level": null,
          "_listData": {},
          "_literal": "This is the first post.",
          "_next": [Circular],
          "_onEnter": null,
          "_onExit": null,
          "_open": true,
          "_parent": [Circular],
          "_prev": null,
          "_sourcepos": undefined,
          "_string_content": null,
          "_title": null,
          "_type": "text",
        },
        "_info": null,
        "_isFenced": false,
        "_lastChild": [Circular],
        "_level": null,
        "_listData": {},
        "_literal": null,
        "_next": null,
        "_onEnter": null,
        "_onExit": null,
        "_open": false,
        "_parent": Node {
          "_destination": null,
          "_fenceChar": null,
          "_fenceLength": 0,
          "_fenceOffset": null,
          "_firstChild": Node {
            "_destination": null,
            "_fenceChar": null,
            "_fenceLength": 0,
            "_fenceOffset": null,
            "_firstChild": Node {
              "_destination": null,
              "_fenceChar": null,
              "_fenceLength": 0,
              "_fenceOffset": null,
              "_firstChild": null,
              "_info": null,
              "_isFenced": false,
              "_lastChild": null,
              "_level": null,
              "_listData": {},
              "_literal": "Post 1",
              "_next": null,
              "_onEnter": null,
              "_onExit": null,
              "_open": true,
              "_parent": [Circular],
              "_prev": null,
              "_sourcepos": undefined,
              "_string_content": null,
              "_title": null,
              "_type": "text",
            },
            "_info": null,
            "_isFenced": false,
            "_lastChild": Node {
              "_destination": null,
              "_fenceChar": null,
              "_fenceLength": 0,
              "_fenceOffset": null,
              "_firstChild": null,
              "_info": null,
              "_isFenced": false,
              "_lastChild": null,
              "_level": null,
              "_listData": {},
              "_literal": "Post 1",
              "_next": null,
              "_onEnter": null,
              "_onExit": null,
              "_open": true,
              "_parent": [Circular],
              "_prev": null,
              "_sourcepos": undefined,
              "_string_content": null,
              "_title": null,
              "_type": "text",
            },
            "_level": 1,
            "_listData": {},
            "_literal": null,
            "_next": [Circular],
            "_onEnter": null,
            "_onExit": null,
            "_open": false,
            "_parent": [Circular],
            "_prev": null,
            "_sourcepos": [
              [
                1,
                1,
              ],
              [
                1,
                8,
              ],
            ],
            "_string_content": null,
            "_title": null,
            "_type": "heading",
          },
          "_info": null,
          "_isFenced": false,
          "_lastChild": [Circular],
          "_level": null,
          "_listData": {},
          "_literal": null,
          "_next": null,
          "_onEnter": null,
          "_onExit": null,
          "_open": false,
          "_parent": null,
          "_prev": null,
          "_sourcepos": [
            [
              1,
              1,
            ],
            [
              4,
              32,
            ],
          ],
          "_string_content": null,
          "_title": null,
          "_type": "document",
        },
        "_prev": Node {
          "_destination": null,
          "_fenceChar": null,
          "_fenceLength": 0,
          "_fenceOffset": null,
          "_firstChild": Node {
            "_destination": null,
            "_fenceChar": null,
            "_fenceLength": 0,
            "_fenceOffset": null,
            "_firstChild": null,
            "_info": null,
            "_isFenced": false,
            "_lastChild": null,
            "_level": null,
            "_listData": {},
            "_literal": "Post 1",
            "_next": null,
            "_onEnter": null,
            "_onExit": null,
            "_open": true,
            "_parent": [Circular],
            "_prev": null,
            "_sourcepos": undefined,
            "_string_content": null,
            "_title": null,
            "_type": "text",
          },
          "_info": null,
          "_isFenced": false,
          "_lastChild": Node {
            "_destination": null,
            "_fenceChar": null,
            "_fenceLength": 0,
            "_fenceOffset": null,
            "_firstChild": null,
            "_info": null,
            "_isFenced": false,
            "_lastChild": null,
            "_level": null,
            "_listData": {},
            "_literal": "Post 1",
            "_next": null,
            "_onEnter": null,
            "_onExit": null,
            "_open": true,
            "_parent": [Circular],
            "_prev": null,
            "_sourcepos": undefined,
            "_string_content": null,
            "_title": null,
            "_type": "text",
          },
          "_level": 1,
          "_listData": {},
          "_literal": null,
          "_next": [Circular],
          "_onEnter": null,
          "_onExit": null,
          "_open": false,
          "_parent": Node {
            "_destination": null,
            "_fenceChar": null,
            "_fenceLength": 0,
            "_fenceOffset": null,
            "_firstChild": [Circular],
            "_info": null,
            "_isFenced": false,
            "_lastChild": [Circular],
            "_level": null,
            "_listData": {},
            "_literal": null,
            "_next": null,
            "_onEnter": null,
            "_onExit": null,
            "_open": false,
            "_parent": null,
            "_prev": null,
            "_sourcepos": [
              [
                1,
                1,
              ],
              [
                4,
                32,
              ],
            ],
            "_string_content": null,
            "_title": null,
            "_type": "document",
          },
          "_prev": null,
          "_sourcepos": [
            [
              1,
              1,
            ],
            [
              1,
              8,
            ],
          ],
          "_string_content": null,
          "_title": null,
          "_type": "heading",
        },
        "_sourcepos": [
          [
            3,
            1,
          ],
          [
            4,
            32,
          ],
        ],
        "_string_content": null,
        "_title": null,
        "_type": "paragraph",
      },
      "_prev": Node {
        "_destination": null,
        "_fenceChar": null,
        "_fenceLength": 0,
        "_fenceOffset": null,
        "_firstChild": null,
        "_info": null,
        "_isFenced": false,
        "_lastChild": null,
        "_level": null,
        "_listData": {},
        "_literal": "This is the first post.",
        "_next": [Circular],
        "_onEnter": null,
        "_onExit": null,
        "_open": true,
        "_parent": Node {
          "_destination": null,
          "_fenceChar": null,
          "_fenceLength": 0,
          "_fenceOffset": null,
          "_firstChild": [Circular],
          "_info": null,
          "_isFenced": false,
          "_lastChild": [Circular],
          "_level": null,
          "_listData": {},
          "_literal": null,
          "_next": null,
          "_onEnter": null,
          "_onExit": null,
          "_open": false,
          "_parent": Node {
            "_destination": null,
            "_fenceChar": null,
            "_fenceLength": 0,
            "_fenceOffset": null,
            "_firstChild": Node {
              "_destination": null,
              "_fenceChar": null,
              "_fenceLength": 0,
              "_fenceOffset": null,
              "_firstChild": Node {
                "_destination": null,
                "_fenceChar": null,
                "_fenceLength": 0,
                "_fenceOffset": null,
                "_firstChild": null,
                "_info": null,
                "_isFenced": false,
                "_lastChild": null,
                "_level": null,
                "_listData": {},
                "_literal": "Post 1",
                "_next": null,
                "_onEnter": null,
                "_onExit": null,
                "_open": true,
                "_parent": [Circular],
                "_prev": null,
                "_sourcepos": undefined,
                "_string_content": null,
                "_title": null,
                "_type": "text",
              },
              "_info": null,
              "_isFenced": false,
              "_lastChild": Node {
                "_destination": null,
                "_fenceChar": null,
                "_fenceLength": 0,
                "_fenceOffset": null,
                "_firstChild": null,
                "_info": null,
                "_isFenced": false,
                "_lastChild": null,
                "_level": null,
                "_listData": {},
                "_literal": "Post 1",
                "_next": null,
                "_onEnter": null,
                "_onExit": null,
                "_open": true,
                "_parent": [Circular],
                "_prev": null,
                "_sourcepos": undefined,
                "_string_content": null,
                "_title": null,
                "_type": "text",
              },
              "_level": 1,
              "_listData": {},
              "_literal": null,
              "_next": [Circular],
              "_onEnter": null,
              "_onExit": null,
              "_open": false,
              "_parent": [Circular],
              "_prev": null,
              "_sourcepos": [
                [
                  1,
                  1,
                ],
                [
                  1,
                  8,
                ],
              ],
              "_string_content": null,
              "_title": null,
              "_type": "heading",
            },
            "_info": null,
            "_isFenced": false,
            "_lastChild": [Circular],
            "_level": null,
            "_listData": {},
            "_literal": null,
            "_next": null,
            "_onEnter": null,
            "_onExit": null,
            "_open": false,
            "_parent": null,
            "_prev": null,
            "_sourcepos": [
              [
                1,
                1,
              ],
              [
                4,
                32,
              ],
            ],
            "_string_content": null,
            "_title": null,
            "_type": "document",
          },
          "_prev": Node {
            "_destination": null,
            "_fenceChar": null,
            "_fenceLength": 0,
            "_fenceOffset": null,
            "_firstChild": Node {
              "_destination": null,
              "_fenceChar": null,
              "_fenceLength": 0,
              "_fenceOffset": null,
              "_firstChild": null,
              "_info": null,
              "_isFenced": false,
              "_lastChild": null,
              "_level": null,
              "_listData": {},
              "_literal": "Post 1",
              "_next": null,
              "_onEnter": null,
              "_onExit": null,
              "_open": true,
              "_parent": [Circular],
              "_prev": null,
              "_sourcepos": undefined,
              "_string_content": null,
              "_title": null,
              "_type": "text",
            },
            "_info": null,
            "_isFenced": false,
            "_lastChild": Node {
              "_destination": null,
              "_fenceChar": null,
              "_fenceLength": 0,
              "_fenceOffset": null,
              "_firstChild": null,
              "_info": null,
              "_isFenced": false,
              "_lastChild": null,
              "_level": null,
              "_listData": {},
              "_literal": "Post 1",
              "_next": null,
              "_onEnter": null,
              "_onExit": null,
              "_open": true,
              "_parent": [Circular],
              "_prev": null,
              "_sourcepos": undefined,
              "_string_content": null,
              "_title": null,
              "_type": "text",
            },
            "_level": 1,
            "_listData": {},
            "_literal": null,
            "_next": [Circular],
            "_onEnter": null,
            "_onExit": null,
            "_open": false,
            "_parent": Node {
              "_destination": null,
              "_fenceChar": null,
              "_fenceLength": 0,
              "_fenceOffset": null,
              "_firstChild": [Circular],
              "_info": null,
              "_isFenced": false,
              "_lastChild": [Circular],
              "_level": null,
              "_listData": {},
              "_literal": null,
              "_next": null,
              "_onEnter": null,
              "_onExit": null,
              "_open": false,
              "_parent": null,
              "_prev": null,
              "_sourcepos": [
                [
                  1,
                  1,
                ],
                [
                  4,
                  32,
                ],
              ],
              "_string_content": null,
              "_title": null,
              "_type": "document",
            },
            "_prev": null,
            "_sourcepos": [
              [
                1,
                1,
              ],
              [
                1,
                8,
              ],
            ],
            "_string_content": null,
            "_title": null,
            "_type": "heading",
          },
          "_sourcepos": [
            [
              3,
              1,
            ],
            [
              4,
              32,
            ],
          ],
          "_string_content": null,
          "_title": null,
          "_type": "paragraph",
        },
        "_prev": null,
        "_sourcepos": undefined,
        "_string_content": null,
        "_title": null,
        "_type": "text",
      },
      "_sourcepos": undefined,
      "_string_content": null,
      "_title": null,
      "_type": "softbreak",
    },
    "_sourcepos": undefined,
    "_string_content": null,
    "_title": "",
    "_type": "image",
  },
]
`;
